<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textSize="24sp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/txtCinta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cinta"
        android:textSize="24sp"
        android:layout_below="@+id/txtNombre"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/txtCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/categoria"
        android:textSize="24sp"
        android:layout_below="@+id/txtCinta"
        android:inputType="number"/>


    <EditText
        android:id="@+id/txtEscuela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escuela"
        android:textSize="24sp"
        android:layout_below="@+id/txtCategoria"
        android:inputType="textPersonName"/>


    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertar"
        android:textSize="24sp"
        android:layout_below="@+id/txtEscuela"/>



</RelativeLayout>